[Refactor] Rename ConcurrentAgentsApp

--- a/apps/assets/default.css
+++ b/apps/assets/default.css
@@ -1,6 +1,7 @@
-body, #app {
-    margin: auto;
-    padding: auto;
+body,
+#app {
+    margin: 0;
+    padding: 0;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
