--- a/apps/assets/default.css
+++ b/apps/assets/default.css
@@ -1,7 +1,7 @@
 body,
 #app {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
+    /* margin: 0;
+    padding: 0; */
+    /* height: 100vh;
+    width: 100vw; */
 }
